--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>TranslateYa</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="built/style.css" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
   
-  <script src="client.min.js"></script>
+  <script src="built/client.min.js"></script>
 </body>
 </html>
