rewrite for mobs

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>TranslateYa</title>
-  <link href="built/style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>MobX React App</title>
 </head>
 <body>
-  <div id="app"></div>
-  
-  <script src="built/client.min.js"></script>
+    <div id="app"></div>
+    <script src="built/app.js"></script>
 </body>
 </html>
